fixed off-screen & styles improvement

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: Helvetica, sans-serif;
+	font-family: 'Press Start 2P', cursive;
 }
 
 html, body {
@@ -16,20 +16,16 @@ html, body {
 
 .start-button {
 	border: 1px solid #000;
-	border-radius: 10px;
 	background: #00ff80;
 	color: #222;
 	font-size: 30px;
 	width: 300px;
-	height: 50px;
+	height: 75px;
 	box-shadow: 0px 5px 15px rgba(1, 1, 1, 0.418);
 }
 
 #canvas-board {
-	/* width: 300px;
-	height: 300px;
-	margin: 30px 0;
-	border: 1px solid #000; */
+	margin: 50px;
 	image-rendering: pixelated;
 }
 
@@ -39,5 +35,4 @@ html, body {
 	left: 50px;
 	bottom: 50px;
 	font-size: 24px;
-	font-family: 'Press Start 2P', cursive;
 }
